--- a/ApolloArchery/app/src/main/res/layout/fragment_create_account.xml
+++ b/ApolloArchery/app/src/main/res/layout/fragment_create_account.xml
@@ -28,14 +28,11 @@
         android:layout_marginStart="27dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="27dp"
-        android:layout_marginBottom="22dp"
         android:importantForAccessibility="no"
         android:src="@drawable/create_account"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/first_name_label"
