--- a/ApolloArchery/app/src/main/res/layout/fragment_sight_marks.xml
+++ b/ApolloArchery/app/src/main/res/layout/fragment_sight_marks.xml
@@ -1,47 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.SightMarksFragment">
+    tools:context=".fragments.SightMarksFragment" >
 
     <TextView
-        android:id="@+id/sitemark_label"
+        android:id="@+id/sight_mark_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="80dp"
+        android:text="@string/sight_marks_label"
         android:textAlignment="center"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Sight Marks" />
+        android:textStyle="bold" />
 
     <ListView
-        android:id="@+id/site_mark_list"
-        android:layout_width="412dp"
-        android:layout_height="558dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sitemark_label"
-        tools:ignore="VisualLintBounds" />
+        android:id="@+id/sight_marks_list"
+        android:layout_width="match_parent"
+        android:layout_height="629dp"
+        android:layout_marginTop="36dp">
+
+    </ListView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/sight_mark_add_fab"
+        android:id="@+id/sight_marks_fAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="24dp"
         android:clickable="true"
-        android:src="@android:drawable/ic_input_add"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/sight_mark_add"
         android:focusable="true"
-        android:contentDescription="@string/sight_mark_add" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:srcCompat="@android:drawable/ic_input_add" />
+</FrameLayout>
