--- a/IOS/ApolloArchery/ApolloArchery/Base.lproj/Main.storyboard
+++ b/IOS/ApolloArchery/ApolloArchery/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--View Controller-->
         <scene sceneID="cLh-a7-oxc">
             <objects>
-                <viewController id="6Tu-Na-UQ4" customClass="ViewController" customModule="Apollo_Archery" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="6Tu-Na-UQ4" customClass="ViewController" customModule="ApolloArchery" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="beY-5N-5S9">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -138,7 +138,7 @@
         <!--Profile View Controller-->
         <scene sceneID="sq3-60-oqC">
             <objects>
-                <viewController id="ABd-JJ-COC" customClass="ProfileViewController" customModule="Apollo_Archery" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="ABd-JJ-COC" customClass="ProfileViewController" customModule="ApolloArchery" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="e1C-ci-ApW">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -170,12 +170,6 @@
                                 </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lza-KM-oLi">
-                                <rect key="frame" x="75" y="164" width="243" height="160"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="160" id="qHS-FV-ews"/>
-                                </constraints>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qvV-rn-yHE">
                                 <rect key="frame" x="75" y="377" width="243" height="28"/>
                                 <color key="tintColor" red="0.55179512500000005" green="0.30646386739999998" blue="0.27842044830000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -208,14 +202,18 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lza-KM-oLi">
+                                <rect key="frame" x="116" y="164" width="160" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="160" id="qHS-FV-ews"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="fSC-Or-Hp3"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="kiN-Hp-uPt" firstAttribute="top" secondItem="fSC-Or-Hp3" secondAttribute="top" constant="16" id="11z-gs-tmR"/>
                             <constraint firstItem="4B8-5V-iot" firstAttribute="bottom" secondItem="fSC-Or-Hp3" secondAttribute="bottom" constant="8" id="8cx-Cp-uMA"/>
-                            <constraint firstItem="fSC-Or-Hp3" firstAttribute="trailing" secondItem="lza-KM-oLi" secondAttribute="trailing" constant="75" id="CWc-dN-xxc"/>
-                            <constraint firstItem="lza-KM-oLi" firstAttribute="leading" secondItem="fSC-Or-Hp3" secondAttribute="leading" constant="75" id="Io5-DU-FuW"/>
                             <constraint firstItem="OB2-6U-Rth" firstAttribute="leading" secondItem="fSC-Or-Hp3" secondAttribute="leading" constant="75" id="Lrt-vI-SaI"/>
                             <constraint firstItem="lza-KM-oLi" firstAttribute="top" secondItem="kiN-Hp-uPt" secondAttribute="bottom" constant="24" id="MBf-8A-ImI"/>
                             <constraint firstItem="OB2-6U-Rth" firstAttribute="top" secondItem="lza-KM-oLi" secondAttribute="bottom" constant="16" id="MZI-N9-MDi"/>
@@ -225,7 +223,9 @@
                             <constraint firstItem="fSC-Or-Hp3" firstAttribute="trailing" secondItem="kiN-Hp-uPt" secondAttribute="trailing" constant="129" id="UXm-ep-Hew"/>
                             <constraint firstItem="4B8-5V-iot" firstAttribute="leading" secondItem="fSC-Or-Hp3" secondAttribute="leading" constant="16" id="VIA-pK-m0n"/>
                             <constraint firstItem="kiN-Hp-uPt" firstAttribute="leading" secondItem="fSC-Or-Hp3" secondAttribute="leading" constant="129" id="afS-Y6-PdS"/>
+                            <constraint firstItem="lza-KM-oLi" firstAttribute="leading" secondItem="fSC-Or-Hp3" secondAttribute="leading" constant="116" id="cNd-l0-83j"/>
                             <constraint firstItem="fSC-Or-Hp3" firstAttribute="trailing" secondItem="4B8-5V-iot" secondAttribute="trailing" constant="16" id="ezQ-zD-cDB"/>
+                            <constraint firstItem="fSC-Or-Hp3" firstAttribute="trailing" secondItem="lza-KM-oLi" secondAttribute="trailing" constant="117" id="gC7-s1-FTU"/>
                             <constraint firstItem="fSC-Or-Hp3" firstAttribute="trailing" secondItem="qvV-rn-yHE" secondAttribute="trailing" constant="75" id="gpL-B3-f0i"/>
                             <constraint firstItem="fSC-Or-Hp3" firstAttribute="trailing" secondItem="OB2-6U-Rth" secondAttribute="trailing" constant="75" id="nRF-xt-FCe"/>
                         </constraints>
@@ -244,7 +244,7 @@
         <!--Arrow Counter View Controller-->
         <scene sceneID="azs-Es-kua">
             <objects>
-                <viewController id="pFz-4L-ISi" customClass="ArrowCounterViewController" customModule="Apollo_Archery" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="pFz-4L-ISi" customClass="ArrowCounterViewController" customModule="ApolloArchery" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="21N-SO-sWm">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -360,7 +360,7 @@
         <!--Reset Password View Controller-->
         <scene sceneID="2dx-XQ-EeO">
             <objects>
-                <viewController storyboardIdentifier="ResetVC" id="Fd5-K6-HoZ" customClass="ResetPasswordViewController" customModule="Apollo_Archery" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ResetVC" id="Fd5-K6-HoZ" customClass="ResetPasswordViewController" customModule="ApolloArchery" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8mx-MZ-LAx">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -476,7 +476,7 @@
         <!--Log In View Controller-->
         <scene sceneID="bgv-bA-ug9">
             <objects>
-                <viewController id="IYt-RE-xq2" customClass="LogInViewController" customModule="Apollo_Archery" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="IYt-RE-xq2" customClass="LogInViewController" customModule="ApolloArchery" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Hgi-ag-zb3">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -653,7 +653,7 @@
         <!--Create Account View Controller-->
         <scene sceneID="0Yd-jN-NgD">
             <objects>
-                <viewController storyboardIdentifier="CreateAccountVC" id="w7Z-XL-gbw" customClass="CreateAccountViewController" customModule="Apollo_Archery" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CreateAccountVC" id="w7Z-XL-gbw" customClass="CreateAccountViewController" customModule="ApolloArchery" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zvf-8e-Iuu">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
