--- a/ApolloArchery/app/src/main/res/layout/fragment_main.xml
+++ b/ApolloArchery/app/src/main/res/layout/fragment_main.xml
@@ -65,9 +65,11 @@
         android:id="@+id/new_round_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="133dp"
         android:text="@string/new_round"
+        app:layout_constraintEnd_toStartOf="@+id/profile_label"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/new_round_btn" />
 
