--- a/ApolloArchery/app/src/main/res/menu/menu_shooting.xml
+++ b/ApolloArchery/app/src/main/res/menu/menu_shooting.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/profile_btn"
         android:icon="@drawable/baseline_profile"
-        android:title="profile_"
+        android:title="@string/profile_button"
         app:showAsAction="ifRoom" />
 </menu>
