--- a/ApolloArchery/app/src/main/res/menu/menu_details.xml
+++ b/ApolloArchery/app/src/main/res/menu/menu_details.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/action_save"
-        android:title="save"
+        android:title="@string/save_"
         android:icon="@android:drawable/ic_menu_save"
         app:showAsAction="ifRoom" />
 </menu>
