--- a/ApolloArchery/app/src/main/res/menu/menu_profile.xml
+++ b/ApolloArchery/app/src/main/res/menu/menu_profile.xml
@@ -3,16 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/app_bar_search"
+        android:id="@+id/action_take_picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:icon="@android:drawable/ic_menu_search"
-        android:queryHint="type name"
-        android:title="search"
-        app:actionViewClass="android.widget.SearchView"
+        android:icon="@android:drawable/ic_menu_camera"
+        android:title="@string/take_picture"
         app:showAsAction="ifRoom" />
     <item android:id="@+id/action_delete"
-        android:title="delete"
+        android:title="@string/delete"
         android:icon="@android:drawable/ic_menu_delete"
         app:showAsAction="ifRoom" />
 </menu>
