--- a/ApolloArchery/app/src/main/res/layout/fragment_login.xml
+++ b/ApolloArchery/app/src/main/res/layout/fragment_login.xml
@@ -125,4 +125,21 @@
         app:layout_constraintBottom_toBottomOf="@+id/login_screen_imageView"
         app:layout_constraintEnd_toEndOf="@+id/forgot_password_btn" />
 
+    <ProgressBar
+        android:id="@+id/login_progress_bar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="290dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="75dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginBottom="32dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="@+id/login_screen_imageView"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/login_screen_imageView"
+        app:layout_constraintTop_toTopOf="@+id/login_screen_imageView"
+        app:layout_constraintVertical_bias="0.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
